# gaze_rl

./: .gitignore  README.md  bayesian_gaze_model.py  bc_policy.py  compare_results.py  data_collector.py  environment.py  evaluate_hierarchical_bc.py  gaze_simulator.py  hierarchical_bc_models.py  prepare_hierarchical_data.py  requirements.txt  run_pipeline.py  train_bayesian_gaze_bc.py  train_bc.py  train_bc_with_gaze.py  train_hierarchical_bc.py
ss/: .gitignore  MUJOCO_LOG.TXT  README.md  gaze_env.yml  pyproject.toml  test.py
ss/assets/franka_emika_panda/: lift.xml  panda.xml  scene.xml
ss/assets/trossen_wx250s/: scene.xml  wx250s.xml
ss/scripts/: demo_collection.py  demo_vis.ipynb  franka_osc.py  test_env.py  widow_osc.py
ss/ss/: __init__.py
ss/ss/envs/: __init__.py  franka_env.py  franka_lift.py
ss/ss/gamepad/: controllers.py  gamepad.py  polling_check.py
ss/ss/utils/: gamepad_utils.py
